[package]
name = "sout_ex_gain_wv"
version = "0.1.0"
edition = "2021"
authors = ["sout <sout_nantang@outlook.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/sout233"
description = "it is a gain plugin written by rust"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_webview = { path = ".." }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
